Marking up small items

--- a/index.html
+++ b/index.html
@@ -11,10 +11,52 @@
 
 <body>
     <header class="main-header">
-
+        <nav class="main-header-nav">
+            <a>
+                <img src="img/logo.svg" width="347" height="47" alt="Новости культуры">
+            </a>
+            <ul class="site-navigation">
+                <li class="site-navigation-item">
+                    <a href="#">Новости</a>
+                </li>
+                <li class="site-navigation-item">
+                     <a href="#">Обзоры</a>
+                </li>
+                <li class="site-navigation-item">
+                    <a href="#">Музыка</a>
+                </li>
+                <li class="site-navigation-item">
+                    <a href="#">Архитектура</a>
+                </li>
+                <li class="site-navigation-item">
+                    <a href="#">Кино</a>
+                </li>
+                <li class="site-navigation-item">
+                    <a href="#">Театр</a>
+                </li>
+                <li class="site-navigation-item">
+                    <a href="#">Литература</a>
+                </li>
+                <li class="site-navigation-item">
+                    <a href="#">Религия</a>
+                </li>
+                <li class="site-navigation-item">
+                    <a href="#">Живопись</a>
+                </li>
+            </ul>
+        </nav>
     </header>
     <main>
-
+        <h1 class="visually-hidden">Новости культуры</h1>
+        <section class="headline">
+            <h2>Подводный отель</h2>            
+        </section>
+        <section class="reviews">
+            <h2>Обзоры</h2>
+        </section>
+        <section class="promo">
+            <h2>Абонементы в театр</h2>
+        </section>
     </main>
     <footer class="main-footer">
 
